<resources>
    <string name="app_name">Paitent Healthcare</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Enter Your Email</string>
    <string name="prompt_password">Enter Your Password</string>
    <string name="forget">Forget your Password?</string>
    <string name="login">Login</string>
    <string name="newAccount">Create New Account? Click HERE</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Next">Proceed To Next</string>
    <string name="Finish">Finish</string>
    <string name="title_activity_login">Sign in</string>
    <string-array name="categorylist">
        <item>----Select Category----</item>
        <item>Cardiologists </item>
        <item>Neurologists </item>
        <item>Obstetricians and Gynecologists</item>
        <item>Psychiatrists </item>
        <item>Urologists </item>
        <item>General Surgeons </item>
    </string-array>

    <string name="action_example">Example action</string>
    <string name="title_activity_patientmain">patientmain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="applicationName">FCM Base PatientHealth Care in Android</string>
    <string name="title_activity_doctor_dash_board">DoctorDashBoard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_padashboard">padashboard</string>
</resources>
